styles.css
/*@media only screen and (min-width: 0) and (max-width: 2040px){
  body {background:#352c35 url(images/mtHoodLg.png) 
    center 20px no-repeat;background-size:100% auto;
    }*/


    body, html {
      height: 100%;
    }

    body {
     background: transparent;
     /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
     font-family: "Muli", open sans, helvetica, sans-serif;
     font-weight: 100;
     color: #EEE8DA;
     max-width: 1500px !important;
     overflow: auto;
     margin: auto;
   }

   a, a:visited {
    text-decoration: none;
    color: white;
  }

  a:hover {
    color: #DBDBDB;
    text-decoration: none;
  }

  .center {
    text-align: center;
  }
  .left {
    text-align: left;
  }
/*
.alignRight {
  text-align: right;
}

.alignLeft {
  text-align: left;
  }*/
  

  .navbar {
    color: white;
    background: black;
    margin-bottom: 0px;
  }

  .navbar-collapse {
    max-width: 1500px !important;
    text-align: center;
  }

  .nav li {
    color: white;
  }

  .nav li:hover {
    background: #2B2B2B;
  }

  .dropdown-menu {
    background: #2B2B2B;
  }

  .dropdown-menu li a {
    color: white;
  }


  .content {
    /*height: 100%;*/
    position: relative;
    background: rgb(242, 242, 242);
  /*padding: 0px;
  margin: 0px;*/

}

#top {
  height: 30px;
  width: 100%;
}

#landing {
  background:#352c35 url('images/mtHoodWebt.png') 
  center 0px no-repeat;background-size:100% auto;
  max-width: 1500px;
  position: fixed;
  height: 100%;
  width: 100%;
}

#slogan {
  background: url(images/logo.png) 
  center no-repeat;
  height: 100%;
  max-height: 900px;
  /*top: 50px;*/
  position: relative;
  display: block;
  /*padding-bottom: 10%;*/
}

#quotes {
  font-size: 20px;
  font-family: 'Muli', Arial, sans-serif;
  font-style: italic;
  position: absolute;
  display: block;
  margin-left: 20px;
  top: 50px;
  color: black;
  /*height: 20px;*/
  width: 50%;
  background: transparent;
}
/**/
.slidingQuotes {
  height: 20px;
  background: transparent;
  -webkit-animation-duration: 1s;
  -webkit-animation-name: slider;
  /*-webkit-animation-iteration-count: one;*/
  /*-webkit-animation-direction: alternate;*/
  -webkit-animation-timing-function: ease-in-out;
}

@-webkit-keyframes slider {
  from {
    margin-left: 2000px;
  }

  to {
    margin-left: 20px;
  }
}
/**/

/**/
.leavingQuotes {
  height: 20px;
  background: transparent;
  -webkit-animation-duration: 1s;
  -webkit-animation-name: leaver;
  /*-webkit-animation-iteration-count: one;*/
  /*-webkit-animation-direction: alternate;*/
  -webkit-animation-timing-function: ease-in-out;
}

@-webkit-keyframes leaver {
  from {
    margin-left: 20px;
  }

  to {
    margin-left: -2000px;
  }
}
/**/

#divOne {
  /*position: relative;*/
  /*background: url(images/office.jpg) 
  center 0.2 no-repeat;*/
  background: black;
  padding: 0px;
  color: white;


  /*font-weight: 100;*/
  
}

.established {
  background: #3B4A45;
}

.talent {
  /*padding-top: 15%;*/
  padding-bottom: 15%;
}

#aboutUs {
  display: block;
}

#aboutUs, #aboutUs a {
  /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
  /*font-family: helvetica, Arial, sans-serif;*/

  /*color: white;*/
  /*font-size: 19px;*/
}

#aboutUs ul {
  font-size: 15px;
  /*padding-right: 0px;*/
}

.aboutTitle {
  font-size: 30px;
  text-align: right;
}

.bio {
  margin-bottom: 70px;
}

/*.meetTeam {
  background: none;
  border: solid 1px grey;
  border-radius: 4px;
  }*/

  .btn-default {
    /*height: 18px;
    width: 125px;
    padding-bottom: 12px;
    padding-top: 12px;
    background: #2E2E33;
    font-family: helvetica, Arial, sans-serif;
    font-size: 15px;
    font-weight: 100;
    text-shadow: none;
    color: white;
    border: none;
    border-radius: none;
    margin-bottom: 10%;*/
    /*margin-left: 5%;*/
    border-bottom-color: rgb(204, 204, 204);
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    border-bottom-style: solid;
    border-bottom-width: 1px;
    border-image-outset: 0px;
    border-image-repeat: stretch;
    border-image-slice: 100%;
    border-image-source: none;
    border-image-width: 1;
    border-left-color: rgb(204, 204, 204);
    border-left-style: solid;
    border-left-width: 1px;
    border-right-color: rgb(204, 204, 204);
    border-right-style: solid;
    border-right-width: 1px;
    border-top-color: rgb(204, 204, 204);
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-top-style: solid;
    border-top-width: 1px;
    color: rgb(242, 242, 242);
    cursor: auto;
    display: inline-block;
    /*font-family: proxima-nova, Arial, sans-serif;*/
    font-size: 12px;
    
    
    letter-spacing: normal;
    line-height: 18px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
    margin-top: 0px;
    padding-bottom: 12px;
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 12px;
    text-align: center;
    background: transparent;
    text-decoration: none solid rgb(153, 153, 153);
    text-shadow: none;
    height: 38px;
    width: 125px;

  }

  .btn-default:hover {
    color: white;
    background: #3A3940;
  }

  .modal-content {
    color: black;
    font-size: 19px;
  }

  .modal-content a {
    color: black;
  }

  .modal-content a:hover {
    color: #46B054;
  }

  .aboutDiv {
    margin-bottom: 10px;
  }

  #office {
    padding-top: 3px;
    text-align: center;
    /*position: absolute;*/
  }

/*.talentAreas {
  padding-bottom: 10%
  }*/
/*.col-xs-12 {
  padding: 0px;
  }*/

  #teamListings {
    height: 300px;
    background: #8A8A8A;
    padding-top: 100px;
  }

  .modalImg {
    padding-top: 10px;
  }

  .title {
    font-size: 30px;
  }

/*button, .button {
  background: black;
  color: #EEE8DA;
  border: solid 1px #767676;
  border-radius: 5px;
  font-weight: normal;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 16px;
  margin-top: 20px;
  }*/

  #coreValues {
    font-size: 19px;
    /*background: black;  */
    font-weight: 400;
    /*height: 500px;*/
    background: rgb(242, 242, 242);
    color: black;
    position: relative;
  }

  .CVDiv {
    padding-top: 10%;
    padding-bottom: 10%;

  }

  .CVQuote {
    padding-top: 20%;
    padding-bottom: 10%;
    font-size: 40px;
    color: #46B054;
  }

  #divTwo {
  /*background: url('images/comp.png') 
  center 20px no-repeat;background-size:100% auto;*/
  background: rgb(242, 242, 242);
  /*width: 100%;
  height: 100%;*/
  font-size: 19px;
  font-weight: 400;
  color: black;
/*  padding-left: 0px;
padding-right: 0px;*/
 /* margin-left: 0px;
 margin-right: 0px;*/
 /*margin-right: 0px;*/
 /*text-align: right;*/
 position: relative;
}

/*#divTwo img {
  width: 110%;

  }*/

/*#divTwo h2 {
  position: absolute;
  top: 10%;
  left: 10%;
  }*/

  #divTwo img, #pdx img {
    width: 100%;
    padding-left: 0px;
    padding-right: 0px;
    margin-left: 0px;
    margin-right: 0px;
  }


  #itRecruiting {
    /*width: 100%;*/
    position: absolute;
    top: 10%;
    font-size: 19px;
    font-weight: 400;
    font-family: "Muli", sans-serif;

  /*  padding-left: 0px;
  padding-right: 0px;*/
 /* margin-left: 0px;
 margin-right: 0px;*/
}

.itDesc {
  background: rgba(242, 242, 242, 0.5);
}

#rapidlyFill {
  text-align: center;
  text-decoration: underline;
}

.directIt {
  /*background: black;*/
  /*box-shadow: 10px 10px 5px #888888;*/
}

#pdx {
  position: relative;
}


#divThree {
  height: 100px;
  background: rgb(242, 242, 242);
  /*font-size: 19px;*/
  /*font-weight: 400;*/
  text-align: center;
  color: black;
  width: 100%;
  /*bottom: 20px;*/
  position: relative;
}

/*#divThree div {
  padding-top: 50px;
}*/

#divThree a {
  color: black;
}

#divThree a:hover {
  color: #46B054;
}

#hiringthing-jobs {
  text-align: left;
}

.ht-link {
  display: none;
}

.ht-location {
  font-size: 12px;
  padding-top: 0px;
}

.ht-summary {
  font-size: 15px;
}
/*.divCenter {
  margin-top: 20px;
  margin-bottom: 20px;
  font-size: 30px;
  font-weight: 150;
  color: #999;
  }*/


/*.carousel-fade {
  .carousel-inner {
    .item {
      opacity: 0;
      transition-property: opacity;
    }

    .active {
      opacity: 1;
    }

    .active.left,
    .active.right {
      left: 0;
      opacity: 0;
      z-index: 1;
    }

    .next.left,
    .prev.right {
      opacity: 1;
    }
  }

  .carousel-control {
    z-index: 2;
  }
  }*/



/*#slideshow {
    position:relative;
    height:350px;
}

#slideshow IMG {
    position:absolute;
    top:0;
    left:0;
    z-index:8;
}

#slideshow IMG.active {
    z-index:10;
}

#slideshow IMG.last-active {
    z-index:9;
    }*/


    .quote {
      width: 200px;
      height: 200px;
    }



    .textOverlay {
      background: white;

    }

    .yellowTop {
      background: #FFDC00;
      width: 100%;
    }


    #cloudText {
     font-size: 35px;
     font-weight: 100;
     background: white;
     /*position: relative;*/
   }


   #future {
     font-size: 30px;
     font-weight: 150;
   }

   #listings {
	/*font-size: 30px;
	font-weight: 150;
	color: #999;*/
}

#contact {
  /*text-align: right;*/
  font-size: 19px;
  color: black;
  /*height: 200px*/
}

.fsBottom {
  padding-top: 50px;
}

/*@media (min-width: 868px) {
  .navbar .navbar-nav {
    display: inline-block;
    float: none;
  }

  .navbar .navbar-collapse .navbar-brand {
    text-align: center;
  }

  .nav>li {
    padding-left: 60px;
    padding-right: 60px;
  }
}
*/
/*@media (min-width: 768px) {
  .navbar .navbar-nav {
    display: inline-block;
    float: none;
  }

  .navbar .navbar-collapse, .navbar-brand {
    text-align: center;
  }

  .nav>li {
    padding-left: 0px;
    padding-right: 0px;
  }
  }*/

  @media (max-width: 1280px) {
    #slogan {
      max-height: 700px;
    }
  }

  @media (max-width: 990px) {
    #itRecruiting {
     position: relative;
     background: white;
   }

   #slogan {
    max-height: 500px;
  }
}

@media (max-width: 790px) {
  #cloudText {
    font-size: 20px;
  }

  /*#landing {
    height: 400px;
    }*/

    #slogan {
      background: url(images/logoSm.png) center no-repeat;
      max-height: 240px;
    }

    #quotes {
      font-size: 10px;
      top: 25px;
      width: 75%;
      margin-left: 5px;
    }

    .CVQuote {
      font-size: 25px;
    }


/*
  #slogan {
    padding-top: 100px;
    max-height: 300px;

    }*/

    .content {
      margin-top: 0%;
    }

    #aboutUs {
      /*padding-left: 10px;*/
    }

  }

